Make sidebar work, add MemoryRouter

--- a/src/assets/i18n/en/core.json
+++ b/src/assets/i18n/en/core.json
@@ -5,7 +5,7 @@
         "theme": "Toggle Theme"
     },
     "lang": {
-        "choose": "Site language",
+        "choose": "App language",
         "en": "English (English)"
     }
 }
