--- a/src/assets/i18n/en/core.json
+++ b/src/assets/i18n/en/core.json
@@ -1,11 +1,1 @@
-{
-    "title": "YAIM",
-    "sidebar": {
-        "lang": "Set Language",
-        "theme": "Toggle Theme"
-    },
-    "lang": {
-        "choose": "App language",
-        "en": "English (English)"
-    }
-}
+{"title":"YAIM","sidebar":{"lang":"Set Language","theme":"Toggle Theme","load_data":"Load data","project_settings":"Project settings","create_namespace":"Create namespace","save_project":"Save project"},"lang":{"choose":"App language","en":"English (English)"},"save":{"warn":{"alert":"There were problems saving the data. Please check the console (Ctrl+Shift+I) for more information","no_permission":"Could not save as permission was denied!","language_fail":"Failed to save language {{lang}}: {{error}}","namespace_fail":"Failed to save language {{lang}} namespace {{ns}}: {{error}}"}},"new":{"namespace":"new_namespace"}}
