Reorganise into hierarchy to hopefully improve performance and clutter

--- a/src/assets/i18n/en/core.json
+++ b/src/assets/i18n/en/core.json
@@ -1,71 +1,1 @@
-{
-    "title": "YAIM",
-    "sidebar": {
-        "lang": "Set Language",
-        "theme": "Toggle Theme",
-        "load_data": "Load data",
-        "project_settings": "Project settings",
-        "create_namespace": "Create namespace",
-        "save_project": "Save project"
-    },
-    "lang": {
-        "choose": "App language",
-        "en": "English (English)",
-        "keys": "Translation keys (lang.keys)"
-    },
-    "save": {
-        "warn": {
-            "alert": "There were problems saving the data. Please check the console (Ctrl+Shift+I) for more information",
-            "no_permission": "Could not save as permission was denied!",
-            "language_fail": "Failed to save language {{lang}}: {{error}}",
-            "namespace_fail": "Failed to save language {{lang}} namespace {{ns}}: {{error}}"
-        }
-    },
-    "new": {
-        "namespace": "new_namespace",
-        "key": "my.fancy.new.key",
-        "lang": "new-lang"
-    },
-    "key_row": {
-        "translation_for": "Translation for {{lang}}",
-        "delete": "Delete key"
-    },
-    "namespace": {
-        "error": {
-            "key_empty": "Key cannot be empty",
-            "key_exists": "Key exists or is a group",
-            "name_exists": "A namespace with this name exists already"
-        },
-        "label": {
-            "name": "Namespace name",
-            "delete": "Delete namespace",
-            "add_key": "Add new key"
-        },
-        "add_key": {
-            "title": "Add key",
-            "label": {
-                "input": "Key name",
-                "help": "The new key, consisting of parts separated by dots (.)"
-            }
-        }
-    },
-    "button": {
-        "cancel": "Cancel",
-        "confirm": "Confirm"
-    },
-    "project": {
-        "error": {
-            "lang_empty": "The language code may not be empty",
-            "lang_exists": "This language is already used in this project",
-            "bad_path": "This text cannot be used as a path name"
-        },
-        "add_lang": {
-            "chip": "Add a language",
-            "label": {
-                "title": "Add language",
-                "input": "Language code",
-                "help": "The code for the new language, usually two characters e.g. 'en'"
-            }
-        }
-    }
-}
+{"title":"YAIM","sidebar":{"lang":"Set Language","theme":"Toggle Theme","load_data":"Load data","project_settings":"Project settings","create_namespace":"Create namespace","save_project":"Save project"},"lang":{"choose":"App language","en":"English (English)","keys":"Translation keys (lang.keys)"},"save":{"warn":{"alert":"There were problems saving the data. Please check the console (Ctrl+Shift+I) for more information","no_permission":"Could not save as permission was denied!","language_fail":"Failed to save language {{lang}}: {{error}}","namespace_fail":"Failed to save language {{lang}} namespace {{ns}}: {{error}}"}},"new":{"namespace":"new_namespace","key":"my.fancy.new.key","lang":"new-lang"},"key_row":{"translation_for":"Translation for {{lang}}","delete":"Delete key"},"namespace":{"error":{"key_empty":"Key cannot be empty","key_exists":"Key exists or is a group","name_exists":"A namespace with this name exists already"},"label":{"name":"Namespace name","delete":"Delete namespace","add_key":"Add new key","add_group":"Add new key group"},"add_key":{"title":"Add key","label":{"input":"Key name","help":"The new key, consisting of parts separated by dots (.)"}}},"button":{"cancel":"Cancel","confirm":"Confirm"},"project":{"error":{"lang_empty":"The language code may not be empty","lang_exists":"This language is already used in this project","bad_path":"This text cannot be used as a path name"},"add_lang":{"chip":"Add a language","label":{"title":"Add language","input":"Language code","help":"The code for the new language, usually two characters e.g. 'en'"}}}}
