--- a/src/assets/i18n/keys/core.json
+++ b/src/assets/i18n/keys/core.json
@@ -1,1 +1,1 @@
-{"lang":{"en":"lang.en (English)","keys":"lang.keys (lang.keys)"},"namespace":{"label":{}}}
+{"lang":{"en":"lang.en (English)","keys":"lang.keys (lang.keys)"},"namespace":{"label":{},"error":{}},"button":{},"new":{}}
